# FrontPocket

./: CHANGELOG.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  frontpocket.ini  frontpocket.service  frontpocket_client.py  frontpocket_installer.sh  frontpocket_server.py  frontpocket_shared.py  frontpocket_toolbar.py  pyproject.toml  requirements.txt
